# Bulletproof_bt

./: .gitignore  README.md  pyproject.toml  pytest.ini
configs/: engine.yaml  fees.yaml  slippage.yaml
docs/: accounting_contract.md  audit.md  beginner_vs_pro_contract.md  benchmark_contract.md  bybit_demo_execution_contract.md  chatgpt_context.md  client_guide.md  config_layering_contract.md  core_contract.md  data_market_contract.md  dataset_contract.md  diagnostic_input_matrix.md  engine-diagnostic-emission-contract.md  engine_input_contract.md  error_and_run_status_contract.md  execution_model_contract.md  fx_traditional_v1_freeze.md  h1_strategy_suite.md  hypothesis_contract.md  instrument_contract.md  l1_h10a_verdict.md  l1_h2_compression_mean_reversion.md  l1_h3_har_rv_gate_trend.md  l1_h3c_har_regime_switch.md  l1_h4b_liquidity_gate_size_adjusted_mean_reversion.md  l1_h7_parent_family.md  l1_h7a_squeeze_expansion_pullback.md  l1_h7b_squeeze_expansion_pullback_timeframe.md  l1_h7c_high_selectivity_regime.md  l1_h7d_adaptive_runner.md  l1_h7e_flow_sensitive_runner.md  l1_h7f_flow_gated_entry.md  l1_h9_diagnostics.md  l1_h9_parent_family.md  l1_h9a_momentum_breakout.md  l1_h9b_breakout_partial_runner.md  output_artifacts_contract.md  parallel_grid_runner.md  portfolio_risk_contract.md  post_run_diagnostics.md  (+13 more)
orchestrator/: README_daemon.md  daemon_config.sample_pipeline_smoke.yaml  daemon_config.yaml  interpret_experiment_results.py  process_logging.py  queue_hypothesis.py  research_daemon.py  research_memory.py  research_memory_config.yaml  run_dashboard.py  (+5 more)
(+548 files in other folders)
